--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+	"homepage": "https://akhademik.github.io/all-in-one/",
 	"name": "pvi-all",
 	"private": true,
 	"version": "0.0.0",
@@ -6,6 +7,7 @@
 	"scripts": {
 		"start": "vite",
 		"build": "vite build",
+		"deploy": "gh-pages -d build",
 		"preview": "vite preview"
 	},
 	"dependencies": {
@@ -18,6 +20,7 @@
 		"@types/react": "^18.0.17",
 		"@types/react-dom": "^18.0.6",
 		"@vitejs/plugin-react": "^2.1.0",
+		"gh-pages": "^4.0.0",
 		"sass": "^1.54.9",
 		"vite": "^3.1.0"
 	}
