--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"scripts": {
 		"start": "vite",
 		"build": "vite build",
-		"deploy": "gh-pages -d build",
+		"deploy": "gh-pages -d dist",
 		"preview": "vite preview"
 	},
 	"dependencies": {
